--- a/src/Boheme/CafeBundle/Resources/views/Wine/show.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Wine/show.html.twig
@@ -1,76 +1,114 @@
-{% extends '::base.html.twig' %}
+{# src/Boheme/CafeBundle/Resources/views/Meal/show.html.twig #}
+{% extends 'NmsAdminBundle::layout.html.twig' %}
 
-{% block body -%}
-    <h1>Wine</h1>
+{% set page_title = 'view Wine' %}
 
-    <table class="record_properties">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ entity.title }}</td>
-            </tr>
-            <tr>
-                <th>Note</th>
-                <td>{{ entity.note }}</td>
-            </tr>
-            <tr>
-                <th>Glassvolume</th>
-                <td>{{ entity.glassvolume }}</td>
-            </tr>
-            <tr>
-                <th>Glassprice</th>
-                <td>{{ entity.glassprice }}</td>
-            </tr>
-            <tr>
-                <th>Carafevolume</th>
-                <td>{{ entity.carafevolume }}</td>
-            </tr>
-            <tr>
-                <th>Carafeprice</th>
-                <td>{{ entity.carafeprice }}</td>
-            </tr>
-            <tr>
-                <th>Bottlevolume</th>
-                <td>{{ entity.bottlevolume }}</td>
-            </tr>
-            <tr>
-                <th>Bottleprice</th>
-                <td>{{ entity.bottleprice }}</td>
-            </tr>
-            <tr>
-                <th>Created</th>
-                <td>{{ entity.created|date('Y-m-d H:i:s') }}</td>
-            </tr>
-            <tr>
-                <th>Createdby</th>
-                <td>{{ entity.createdby }}</td>
-            </tr>
-            <tr>
-                <th>Updated</th>
-                <td>{{ entity.updated|date('Y-m-d H:i:s') }}</td>
-            </tr>
-            <tr>
-                <th>Updatedby</th>
-                <td>{{ entity.updatedby }}</td>
-            </tr>
-        </tbody>
-    </table>
+{% block title %}
+{{ parent() }} {{page_title }}
+{% endblock %}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('wine') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('wine_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+{% block stylesheets %}
+{% endblock %}
+
+{% block javascripts %}
+{% endblock %}
+
+{% block pagetitle %} {% endblock %}
+
+{% block breadcrumb %}
+<li><a href="{{ path('wine') }}">Meal</a><i class="icon-angle-right"></i></li>
+<li><a href="{{ path('wine_show', { 'id': entity.id }) }}">View</a></li>
+{% endblock %}
+
+{% block body %}
+<!--=== Content Part ===-->
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-grey margin-bottom-40">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="icon-glass"></i> {{page_title }}</h3>
+                </div>
+                <div class="panel-body form-horizontal">
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Id</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.id }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Title</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.title }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Description</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.note}}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">By the glass</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.glassprice }} for {{ entity.glassvolume }} ml</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">By the carafe</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.carafeprice }} for {{ entity.carafevolume }} ml</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">By the bottle</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.bottleprice }} for {{ entity.bottlevolume }} ml</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Variety</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.variety.title }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Region</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.region.title }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Created</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.createdby }} at {{ entity.created|date('d-m-Y H:i:s') }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Updated</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.updatedby }} at {{ entity.updated|date('d-m-Y H:i:s') }}</span>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-lg-offset-2 col-lg-10">
+                                <a href="{{ path('wine_edit', { 'id': entity.id }) }}" class="btn btn-primary" ><i class="icon-pencil"></i> Edit</a>
+                                <a href="{{ path('wine') }}" class="btn btn-default" >Back</a>
+                                <span class="pull-right">
+                                    <form action="{{ path('wine_delete', { 'id': entity.id }) }}" method="post">
+                                        <input type="hidden" name="_method" value="DELETE" />
+                                            {{ form_widget(delete_form) }}
+                                        <button class="btn btn-danger" type="submit"><i class="icon-trash"></i> Delete</button>
+                                    </form>
+                                </span>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
