--- a/src/Boheme/CafeBundle/Resources/views/Meal/edit.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Meal/edit.html.twig
@@ -83,7 +83,8 @@
                             </div>
                         </div>
 
-                    {{ form_rest(edit_form) }}
+                    {{ form_widget(edit_form._token) }}
+                    {{ form_end(edit_form) }}
 
                         <div class="form-group">
                             <div class="col-lg-offset-2 col-lg-10">
