--- a/src/Boheme/CafeBundle/Resources/views/Meal/index.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Meal/index.html.twig
@@ -17,18 +17,20 @@
 {% block body -%}
 <!--=== Content Part ===-->
 <div class="container">
-    <div class="row-fluid">
-        <div class="row-fluid margin-bottom-20">
-            <div class="span12">
-                <div class="headline">
-                    <h3>Menu items</h3>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-grey margin-bottom-40">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="icon-glass"></i> {{ page_title }}</h3>
                 </div>
-                <div class="row-fluid">
-                    <div class="span12">
+                <div class="panel-body">
+                    <div class="col-md-9">
                     {{ knp_pagination_filter(pagination, fields) }}
                     </div>
-                    <div class="pull-right">
-                        <a href="{{ path('meal_new') }}" class="btn btn-u-green"><i class="icon-plus"></i> Add</a>
+                    <div class="col-md-3">
+                        <div class="pull-right">
+                            <a href="{{ path('meal_new') }}" class="btn btn-u-green"><i class="icon-plus"></i> Add</a>
+                        </div>
                     </div>
                 </div>
                 <table class="table table-striped">
@@ -64,11 +66,11 @@
                     {% endfor %}
                     </tbody>
                 </table>
-                <div class="row-fluid">
-                    <div class="span6">
+                <div class="row">
+                    <div class="col-md-6">
                         <div class="dataTables_info" id="record_info">{{pagination.TotalItemCount}} records in total.</div>
                     </div>
-                    <div class="span6">
+                    <div class="col-md-6">
                         {{ knp_pagination_render(pagination) }}
                     </div>
                 </div>
