resolve issue with edit not submitting

--- a/src/Boheme/CafeBundle/Resources/views/Wine/edit.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Wine/edit.html.twig
@@ -32,7 +32,8 @@
                 </div>
                 <div class="panel-body">
                     {{ form_errors(edit_form) }}
-                    <form action="{{ path('wine_update', { 'id': entity.id }) }}" class="form-horizontal" method="post" {{ form_enctype(edit_form) }}>
+                    {{ form_start(edit_form, {'attr':{'class':'form-horizontal'} }) }}
+{#                    <form action="{{ path('wine_update', { 'id': entity.id }) }}" class="form-horizontal" method="post" {{ form_enctype(edit_form) }}>#}
                         <div class="form-group">
                         {{ form_label(edit_form.title, label|default(null), { 'label_attr': { 'class': 'col-lg-2 control-label' } }) }}
                             <div class="col-lg-6">
@@ -104,13 +105,13 @@
                             </div>
                         </div>
 
-                        {{ form_rest(edit_form) }}
-
                         <div class="form-group">
                             <div class="col-lg-offset-2 col-lg-10">
-                                <button type="submit" class="btn-u btn-u-green">Update</button>
+{#                                {{ form_widget(edit_form.submit, {'attr':{'class':'btn-u btn-u-green'} }) }}#}
+                                <button type="submit" class="btn-u btn-u-green"><i class="icon-ok"></i> Update</button>
                                 <a href="{{ path('wine') }}" class="btn btn-default">Back</a>
-                    </form>
+                        {{ form_end(edit_form) }}
+{#                    </form>#}
                                 <span class="pull-right">
                                     <form action="{{ path('wine_delete', { 'id': entity.id }) }}" method="post">
                                         <input type="hidden" name="_method" value="DELETE" />
