--- a/src/Boheme/CafeBundle/Resources/views/Meal/new.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Meal/new.html.twig
@@ -31,9 +31,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <div class="panel margin-bottom-40">
+            <div class="panel panel-grey margin-bottom-40">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="icon-tasks"></i> {{page_title}}</h3>
+                    <h3 class="panel-title"><i class="icon-food"></i> {{page_title}}</h3>
                 </div>
                 <div class="panel-body">
                 {{ form_errors(form) }}
@@ -93,7 +93,7 @@
                         <div class="form-group">
                             <div class="col-lg-offset-2 col-lg-10">
                                 <button type="submit" class="btn-u btn-u-green"><i class="icon-ok"></i> Create</button>
-                                <a href="{{ path('meal') }}" class="btn black" >Back</a>
+                                <a href="{{ path('meal') }}" class="btn btn-default" >Back</a>
                             </div>
                         </div>
 
