--- a/src/Boheme/CafeBundle/Resources/views/Meal/index.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Meal/index.html.twig
@@ -21,7 +21,7 @@
         <div class="col-md-12">
             <div class="panel panel-grey margin-bottom-40">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="icon-glass"></i> {{ page_title }}</h3>
+                    <h3 class="panel-title"><i class="icon-food"></i> {{ page_title }}</h3>
                 </div>
                 <div class="panel-body">
                     <div class="col-md-9">
