rename meal route to food

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -105,7 +105,7 @@
                             <i class="icon-angle-down"></i>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ path('boheme_cafe_mealpage') }}">Meals</a></li>
+                            <li><a href="{{ path('boheme_cafe_foodpage') }}">Food</a></li>
                             <li><a href="{{ path('boheme_cafe_winepage') }}">Wine List</a></li>
                         </ul>
                     </li>
