--- a/src/Nms/AdminBundle/Resources/views/Pagination/sliding.html.twig
+++ b/src/Nms/AdminBundle/Resources/views/Pagination/sliding.html.twig
@@ -1,8 +1,8 @@
 {# default Sliding pagination control implementation #}
 
 {% if pageCount > 1 %}
-<div class="dataTables_paginate paging_bootstrap pagination">
-    <ul>
+<div >
+    <ul class="pagination">
 
     {% if previous is defined %}
         <li>
