--- a/src/Boheme/CafeBundle/Resources/views/Wine/show.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Wine/show.html.twig
@@ -73,6 +73,12 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-lg-3 control-label">Type</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.type.title }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-lg-3 control-label">Region</label>
                             <div class="col-lg-9 controls">
                                 <span class="text">{{ entity.region.title }}</span>
