update bylines for photos

--- a/src/Boheme/CafeBundle/Resources/views/Default/index.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Default/index.html.twig
@@ -50,7 +50,7 @@
 <!-- //End Service Blokcs -->
 
     <!-- Recent Works -->
-    <div class="headline"><h2>Recent vistas</h2></div>
+    <div class="headline"><h2>Recent photos</h2></div>
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="thumbnails thumbnail-style thumbnail-kenburn">
@@ -61,8 +61,8 @@
                     <a class="btn-more hover-effect" href="#">read more +</a>
                 </div>
                 <div class="caption">
-                    <h3><a class="hover-effect" href="#">Project One</a></h3>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+                    <h3><a class="hover-effect" href="#"></a></h3>
+                    <p>The sun-­‐speckled front courtyard of Kellet Street.</p>
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
                     <a class="btn-more hover-effect" href="#">read more +</a>
                 </div>
                 <div class="caption">
-                    <h3><a class="hover-effect" href="#">Project Two</a></h3>
+                    <h3><a class="hover-effect" href="#"></a></h3>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                     <a class="btn-more hover-effect" href="#">read more +</a>
                 </div>
                 <div class="caption">
-                    <h3><a class="hover-effect" href="#">Project Three</a></h3>
+                    <h3><a class="hover-effect" href="#"></a></h3>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     <a class="btn-more hover-effect" href="#">read more +</a>
                 </div>
                 <div class="caption">
-                    <h3><a class="hover-effect" href="#">Project Four</a></h3>
+                    <h3><a class="hover-effect" href="#"></a></h3>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
                 </div>
             </div>
